fix layout bugs in IE8

--- a/css/base.less
+++ b/css/base.less
@@ -648,11 +648,17 @@ input, button {
 .mauto { margin-left: auto; margin-right: auto; }
 .w { width: 100%; }
 .h { height: 100%; }
-.op9 { opacity: 0.9 }
+.op9 { opacity: 0.9}
 .op8 { opacity: 0.8 }
 .op7 { opacity: 0.7 }
 .op6 { opacity: 0.6 }
 .op5 { opacity: 0.5 }
+*.op9 { filter: ~"alpha(opacity=90)"; }
+*.op8 { filter: ~"alpha(opacity=80)"; }
+*.op7 { filter: ~"alpha(opacity=70)"; }
+*.op6 { filter: ~"alpha(opacity=60)"; }
+*.op5 { filter: ~"alpha(opacity=50)"; }
+
 
 /*
  ******************************* 浮动栅格 *******************************
