--- a/css/index.less
+++ b/css/index.less
@@ -9,9 +9,16 @@
   font-size: 16px;
   font-weight: 300;
   margin: 0;
-  &:after {
-
-  }
+}
+.bg-layer {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  opacity: 0.5;
+  z-index: -1;
+}
+*.bg-layer {
+  filter: ~"alpha(opacity=50)";
 }
 .divider {
   display: block;
@@ -42,13 +49,19 @@
   transition: opacity 0.5s;
   &:after {
     content: '\f106';
-    font-family: FontAwesome;
+    font-family: FontAwesome, sans-serif;
     font-size: 20px;
     color: #fff;
   }
   &:hover {
     cursor: pointer;
     opacity: 1;
+  }
+}
+*.return-top {
+  filter: ~"alpha(opacity=50)";
+  &:hover {
+    filter: ~"alpha(opacity=100)";
   }
 }
 
@@ -67,6 +80,7 @@
   position: relative;
   height: @header-height;
   .searchbar {
+    //overflow: hidden;
     position: absolute;
     top: 470px;
     left: 0;
@@ -79,12 +93,9 @@
     width: 100%;
     z-index: -2;
   }
+
   .bg-layer {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(30,72,67,0.5);
-    z-index: -1;
+    background-color: #1E4843;
   }
   .header-text {
     width: 100%;
@@ -93,7 +104,7 @@
     text-align: center;
   }
   .welcome {
-    font-family: Raleway;
+    font-family: Raleway, sans-serif;
     color: #fff;
     font-size: 40px;
     margin: 0;
@@ -117,12 +128,6 @@
       margin: 0;
     }
   }
-  //.one {
-  //  top: 250px;
-  //}
-  //.two {
-  //  top: 300px;
-  //}
   .nav {
     opacity: 0.8;
     width: 100%;
@@ -131,7 +136,6 @@
   }
   .navbar {
     display: inline-block;
-    //margin: auto;
   }
   @media (max-width: 767px) {
     .title {
@@ -302,7 +306,20 @@
     text-align: center;
     opacity: 0.9;
   }
-
+}
+*.youth-league {
+  .red, .blue, .green {
+    filter: ~"alpha(opacity = 90)";
+  }
+  .red {
+    background-color: #612d29;
+  }
+  .blue {
+    background-color: #1a5d89;
+  }
+  .green {
+    background-color: #337a72;
+  }
 }
 
 
@@ -368,10 +385,12 @@
 
 
 .footer {
+  position: relative;
   padding: 0 0 40px;
-  opacity:0.7;
-  background-color: @footer-bg-color;
-  //height: @footer-height;
+  .bg-layer {
+    background-color: @footer-bg-color;;
+    opacity: 0.7;
+  }
   em {
     font-style: italic;
     font-size: 14px;
@@ -386,6 +405,11 @@
     font-size: 24px;
     line-height: 60px;
     margin: 0;
+  }
+  .contact-us {
+    li {
+      opacity: 0.7;
+    }
   }
 
   .useful-links {
@@ -412,4 +436,22 @@
       margin: 0;
     }
   }
+}
+*.footer{
+  .bg-layer {
+    filter: ~"alpha(opacity = 70)";
+  }
+  h3 {
+    filter: ~"alpha(opacity = 90)";
+  }
+  .useful-links li {
+    filter: ~"alpha(opacity=70)";
+    &:hover {
+      filter: ~"alpha(opacity=90)";
+    }
+  }
+  .contact-us li {
+    filter: ~"alpha(opacity=70)";
+  }
+
 }
