--- a/css/theme.less
+++ b/css/theme.less
@@ -292,7 +292,14 @@ body {
   &:hover:after {
     display: block;
   }
-
+}
+*.link-img {
+  &:before {
+    display: none;
+  }
+  &:hover:before {
+    display: block;
+  }
 }
 .link-img_img-wrap {
   width: 100%;
@@ -303,6 +310,7 @@ body {
   width: 100%;
   height: 100%;
   background-position: center;
+  -webkit-background-size: cover;
   background-size: cover;
 }
 .link-img_text {
@@ -433,26 +441,31 @@ body {
 @searchbar-btn-hover-bg-color: #9b933e;
 @searchbar-btn-color: #fff9b1;
 .searchbar {
-  //float:right;
-  //z-index:0;
   width: @searchbar-width;
   height: @searchbar-height;
   font-size: 0;
+  vertical-align: bottom;
+}
+*.searchbar {
+  filter: ~"alpha(opacity = 50)";
 }
 .searchbar_input {
+  display: inline-block;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
   width: 200px;
   padding: 10px;
-  height: 100%;
+  height: @searchbar-height;
   border: 0;
   font-size: 16px;
   opacity:0.5;
 }
 .searchbar_btn {
+  margin: 0;
+  display: inline-block;
   width: 60px;
-  height: 100%;
+  height: @searchbar-height;
   padding: 0;
   border: 0;
   color: @searchbar-btn-color;
@@ -462,7 +475,11 @@ body {
   &:hover {
     background-color: @searchbar-btn-hover-bg-color
   }
+  *.searchbar_input {
+    height: 50px;
+  }
 }
+
 
 
 /*
@@ -536,7 +553,6 @@ body {
   color: @arrow-color;
   background-color: @arrow-bg-color;
   opacity: 0.7;
-  //border-radius: 100px;
   border-radius: 100%;
   line-height: 16px;
   text-align: center;
@@ -562,6 +578,12 @@ body {
   }
   &:hover {
     opacity: 0.9;
+  }
+}
+*.arrow {
+  filter: ~"alpha(opacity=70)";
+  &:hover {
+    filter: ~"alpha(opacity=90)";
   }
 }
 .arrow.right{
